@@ -3,6 +3,7 @@
 * enhancments
   * added support for obj.stub(:method) { # implementation }
   * allow subject { self } (Jarmo Pertman). Closes #816.
+  * friendly error message when a matcher returns nil on a failure message
 
 * bug fixes
   * NegativeOperatorMatcher now returns false (Wesley Beary). Closes #812.
